# hackupc

./: .gitignore  README.md
seat-car/: index.html
skyscanner/backend/: demo_inlet.py  main.py  metrics_tracker.py  pyproject.toml  utils.py  ws_server.py
skyscanner/frontend/: README.md  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.ts
skyscanner/frontend/src/: App.tsx  index.css
skyscanner/frontend/src/components/: CityCollage.tsx  DecisionToast.tsx  EEGVisualization.tsx  FinalSelection.tsx  UserPreferencesForm.tsx
skyscanner/frontend/src/context/: CitySessionContext.tsx  TeamContext.tsx  VoteContext.tsx
skyscanner/frontend/src/lib/: gpt.ts  pexels.ts
skyscanner/frontend/src/pages/: Destinations.tsx  EEGCitySession.tsx  FinalDestination.tsx  GroupVoting.tsx  Images.tsx  Index.tsx  Preferences.tsx  Results.tsx  Team.tsx
skyscanner/frontend/src/services/: apiService.ts  mockApiService.ts  mockWebSocketService.ts  websocketService.ts
skyscanner/frontend/src/types/: index.ts
skyscanner/frontend/src/utils/: eegUtils.ts
