[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sentiment-analysis-backend"
version = "0.1.0"
description = ""
authors = ["Mudassar Zahid <mudassar.ahmad.zahid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.8"
websockets = "^15.0.1"
muselsl = "^2.3.1"
numpy = "^2.2.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
mypy = "^1.10.0"
ruff = "^0.7.4"

[tool.coverage.run]
omit = ["tests/*", "__init__.py"]

# Linting
[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "N", # PEP8 naming convetions
    "D"  # pydocstyle
]
ignore = [
    "D100",
    "D104",
    "B008",
    # temporary
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
]

[tool.ruff.lint.per-file-ignores]
"utils/mock_data.py" = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
warn_redundant_casts = "True"
warn_unused_ignores = "True"
warn_return_any = "True"
warn_unused_configs = "True"
warn_unreachable = "True"